2009-09-11  Sam Steingold  <sds@gnu.org>

	* makemake.in (check-doc): pass "--tries=1" to wget;
	"-connect_timeout=10" to lynx and
	"--max-time 10" to curl to limit wait time

2009-09-11  Sam Steingold  <sds@gnu.org>

	* m4/clisp.m4: move FFI check from CL_CLISP to CL_CLISP_NEED_FFI
	and AC_REQUIRE CL_CLISP in CL_CLISP_NEED_FFI

2009-09-11  Sam Steingold  <sds@gnu.org>

	* clisp-link.in (current_linking_set): use (sys::program-name)
	instead of (aref (argv) 0)

2009-09-11  Sam Steingold  <sds@gnu.org>

	* m4/clisp.m4 (CL_CLISP): add an early cl_cv_have_clisp=no
	rename cl_cv_clisp_modset to cl_cv_clisp_linkset
	also check for ${cl_cv_clisp_libdir}linkkit/modules.c, as in clisp-link

2009-09-10  Sam Steingold  <sds@gnu.org>

	* makemake.in (MYIMPROOT): revert the 2009-07-06 patch, use podval again

2009-09-10  Sam Steingold  <sds@gnu.org>

	New user variable CUSTOM:*USER-LIB-DIRECTORY* is respected by
	REQUIRE and used by "clisp-link install".
	* clisp-link.in (link): remove the obsolete command
	(install): add command
	(set_dynamic_module_location, current_linking_set): add
	(prepare_dynamic_module): call set_dynamic_module_location
	* constsym.d (user_lib_directory): add
	* defs1.lisp (*user-lib-directory*): defvar
	(require): treat it the same as *lib-directory*
	* spvw.d (init_symbol_values): define_variable user_lib_directory
	(main_actions): init user_lib_directory
	* makemake.in: install clisp-link in bindir;
	generate and install its manpage

2009-09-10  Sam Steingold  <sds@gnu.org>

	* modules/queens/Makefile (callqueens.m.c): fix modprep invocation
	* modules/queens/queens.c (queens): add a prototype to pacify gcc

2009-09-10  Sam Steingold  <sds@gnu.org>

	* modules/berkeley-db/link.sh.in, modules/bindings/glibc/link.sh:
	* modules/bindings/win32/link.sh, modules/clx/mit-clx/link.sh:
	* modules/clx/new-clx/link.sh.in, modules/dbus/link.sh.in:
	* modules/dirkey/link.sh.in, modules/fastcgi/link.sh.in:
	* modules/gdbm/link.sh.in, modules/gtk2/link.sh.in: